--- a/css/custom.css
+++ b/css/custom.css
@@ -16,7 +16,11 @@ body{
 }
 
 #filter-list{
-    background-color:rgba(255,255,255,.6);
+    
+}
+
+.filter-list-species{
+    width:100%;
 }
 
 #add-bird{
