bird popup styling

--- a/css/custom.css
+++ b/css/custom.css
@@ -35,17 +35,13 @@ body{
   z-index:1000;
   width: 100vw;
   height: 100vh;
-  background: rgba(0, 0, 0, 0.4)
+  background: rgba(0, 0, 0, 0.4);
 }
 
 #add-bird-form {
   /*Reset opacity for form*/
   background: white;
-  border-radius: 5px;
-}
-
-#add-bird-form .form-group{
-  padding: 0 5%;
+    margin-top:7%;
 }
 
 .simple_overlay .close {
