--- a/css/custom.css
+++ b/css/custom.css
@@ -9,13 +9,6 @@ a{
     text-decoration:none;
 }
 
-#header{ //not currently used
-    background-color:#aaa;
-    color:#fff;
-    padding:1%;
-    vertical-align: middle;
-}
-
 #filter-options{
     background-color:#aaa;
     color:#fff;
@@ -47,6 +40,18 @@ a{
   padding: 0 5%;
 }
 
+.simple_overlay .close {
+  background-color: #FFFFFF;
+  /*position:absolute;
+  right:-15px;
+  top:-15px;
+  cursor:pointer;
+  height:35px;
+  width:35px;*/
+  height: 35px;
+  width:35px;
+}
+
 .filter-list-check{
     padding:0;
     width:15%;
@@ -72,8 +77,13 @@ a{
     padding:.5%;
 }
 
+#filter-list #filters{
+    height:25vh;
+    overflow-y:scroll;
+}
+
 #entire-list{
-    height:80vh;
+    height:60vh;
     overflow-y:scroll;
 }
 
