--- a/css/custom.css
+++ b/css/custom.css
@@ -35,7 +35,7 @@ a{
   background: white;
   border-radius: 5px;
   display:none;
-  
+
 }
 
 .close {
@@ -126,6 +126,8 @@ a{
 
 .bird-popup{
     width:400px;
+    overflow: hidden;
+    padding-right: 5px;
 }
 
 .bird-info dt{
