Makes colors more transparent

--- a/css/custom.css
+++ b/css/custom.css
@@ -80,6 +80,7 @@ a{
     padding-left:3%;
     width:80%;
     border-right:0;
+    color: black;
 }
 
 .filter-list-o span{
@@ -93,11 +94,6 @@ a{
 #filter-list .row{
     border-radius:5px;
     padding:.5%;
-}
-
-#filter-list-row{
-  max-height:80vh;
-
 }
 
 #filter-list #filters{
