--- a/css/custom.css
+++ b/css/custom.css
@@ -42,6 +42,7 @@ a{
   background: white;
   border-radius: 5px;
   display:none;
+    padding-top:.75%;
 }
 
 .close {
@@ -56,7 +57,7 @@ a{
   vertical-align: middle;
   cursor: pointer;
   background-image: none;
-  border: 1px solid black;
+  border: 0px solid black;
   white-space: nowrap;
   padding: 6px 12px;
   font-size: 14px;
@@ -68,9 +69,10 @@ a{
   user-select: none;
   -webkit-appearance: button;
   color: #000;
-  background-color: #fff;
-  border-color: #000;
+  background-color: #ddd;
   margin-bottom: 2%;
+}#add-bird-submit, #login-submit:hover{
+    background-color:#bbb;
 }
 
 .bootstrap-timepicker-widget {
@@ -189,4 +191,8 @@ hr{
 .filter-list-x .btn.btn-default:hover{
     color:#000;
     background-color:inherit;
+}
+
+label{
+    text-align:right;
 }
