--- a/css/custom.css
+++ b/css/custom.css
@@ -174,6 +174,9 @@ hr{
     overflow-x: hidden;
 }
 
+.input-group-addon .autocomplete-removable {
+    background-color:#999;
+}
 .input-group-addon{
     color:#fff;
     background-color:#aaa;
