--- a/css/custom.css
+++ b/css/custom.css
@@ -84,6 +84,7 @@ a{
     text-align:left;
     padding:0;
     padding-left:4%;
+    width:25px;
 }
 .filter-list-species{
     text-align:left;
@@ -91,6 +92,7 @@ a{
     padding-left:3%;
     border-right:0;
     color: black;
+    width:inherit;
 }
 
 .filter-list-o span{
@@ -177,6 +179,7 @@ hr{
 .input-group{
     border:2px solid transparent;
     border-radius:5px;
+    width:96%;
 }
 .autocomplete-removable .input-group-addon{
     background-color:#eee;
