--- a/css/custom.css
+++ b/css/custom.css
@@ -221,3 +221,16 @@ label{
 .birdocular-logo {
   font-family: 'Comfortaa', cursive;
 }
+
+.filter-container {
+  cursor: pointer;
+  cursor: hand;
+  -webkit-touch-callout: none;
+-webkit-user-select: none; /* Webkit */
+-moz-user-select: none;    /* Firefox */
+-ms-user-select: none;     /* IE 10  */
+
+/* Currently not supported in Opera but will be soon */
+-o-user-select: none;
+user-select: none;
+}
