--- a/css/custom.css
+++ b/css/custom.css
@@ -184,7 +184,7 @@ hr{
 }
 .autocomplete-removable .input-group-addon{
     /*background-color:#eee;*/
-    color:#000;
+    color:#fff;
 }
 .input-group-addon{
     color:#fff;
