--- a/css/custom.css
+++ b/css/custom.css
@@ -145,7 +145,9 @@ a{
     margin-left:105px;
     width:200px;
 }
-
+#map{
+    padding-left:0;
+}
 #map-canvas {
   height: 91vh;
 }
@@ -220,17 +222,4 @@ label{
 
 .birdocular-logo {
   font-family: 'Comfortaa', cursive;
-}
-
-.filter-container {
-  cursor: pointer;
-  cursor: hand;
-  -webkit-touch-callout: none;
--webkit-user-select: none; /* Webkit */
--moz-user-select: none;    /* Firefox */
--ms-user-select: none;     /* IE 10  */
-
-/* Currently not supported in Opera but will be soon */
--o-user-select: none;
-user-select: none;
 }
